# blocks-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bcache_operations.cpp  bcache_operations.h  block_device.cpp  block_device.h  block_stack.cpp  block_stack.h  blocks_types.h  cleanup_image.sh  container.cpp  container.h  create_image.sh  filesystem.cpp  filesystem.h  lvm_operations.cpp  lvm_operations.h  lvmify.cpp  lvmify1.cpp  lvmifyv2.cpp  main.cpp  maintboot_operations.cpp  maintboot_operations.h  resize_operations.cpp  resize_operations.h  synthetic_device.cpp  synthetic_device.h
